--- a/Views/Home/Edit.cshtml
+++ b/Views/Home/Edit.cshtml
@@ -8,12 +8,12 @@
 }
 
 <div class="container">
-    <h3 >Crear Nuevo Cliente</h3>
+    <h3>Crear Nuevo Cliente</h3>
 </div>
 
 <div class="container">
-<form>
-    <div class="form-row"> 
+    <form>
+        <div class="form-row">
             <div class="form-group col-md-6">
                 <label for="inputnombre">Nombre</label>
                 <input type="text" class="form-control" id="inputnombre" placeholder="Nombre">
@@ -22,12 +22,34 @@
             <div class="form-group col-md-6">
                 <label for="inputapellido">Apellido</label>
                 <input type="text" class="form-control" id="inputapellido" placeholder="Apellido">
-            </div>  
-    </div>
+            </div>
+        </div>
+        <div class="form-group">
+            <label for="inputdireccion">Direccion</label>
+            <input type="text" class="form-control" id="inputdireccion" placeholder="Direccion">
+        </div>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="inputCedula">Cedula</label>
+                <input type="text" class="form-control" id="inputCedula"  placeholder="Cedula">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputTelefono">Telefono</label>
+                <input type="text" class="form-control" id="inputTelefono" placeholder="Telefono">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="inputGenero">Genero</label>
+                <select id="inputGenero" class="form-control">
+                    <option selected>Choose...</option>
+                    <option>...</option>
+                </select>
+            </div>
+            
+        </div>
 
-    <button type="submit" class="btn btn-primary">Guardar</button>
+        <button type="submit" class="btn btn-primary">Guardar</button>
 
-    @Html.ActionLink("Cancelar", "Index", "Home",null, new { @class = "btn btn-light" })
+        @Html.ActionLink("Cancelar", "Index", "Home",null, new { @class = "btn btn-light" })
 
-</form>
+    </form>
 </div>
