--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
     <h1 class="display-4">Welcome</h1> 
 </div>
 
-<h4 class="text-success">Lista de Pacientes</h4>
+<h4 class="text-success">Lista de Top Clientes</h4>
 <br />
 <div class="col-sm-10">
     @Html.ActionLink("Crear Nuevo", "Edit", "Home",null, new { @class = "btn btn-primary" })
@@ -18,10 +18,11 @@
     <table class="table table-striped  table-hover">
         <thead>
             <tr>
-                 <th scope="col">Nombre cliente</th>
+                 <th scope="col">Nombre</th>
+                 <th scope="col">Apellidos</th>
                  <th scope="col">Direccion</th>
                  <th scope="col">Telefono</th>
-                 <th scope="col">Edad</th>
+                 <th scope="col">Cedula</th>
             </tr>
         </thead>
         <tbody>
@@ -30,9 +31,10 @@
                 {
                     <tr>
                          <td>@item.Nombre</td>
+                         <td>@item.Apellido</td>
                          <td>@item.Direccion</td>
                          <td>@item.Telefono</td>
-                         <td>@item.Edad</td>
+                         <td>@item.Cedula</td>
                     </tr>
                     
                 }
