--- a/Areas/Identity/Pages/Account/AccessDenied.cshtml
+++ b/Areas/Identity/Pages/Account/AccessDenied.cshtml
@@ -7,4 +7,8 @@
 <header>
     <h1 class="text-danger">@ViewData["Title"]</h1>
     <p class="text-danger">No tienes acceso a este recurso.</p>
+    <div class="container ls-glass">      
+        <img src="~/img/accesodenegado.jpg" />
+    </div>
+ 
 </header>
