--- a/Views/Pago/Index.cshtml
+++ b/Views/Pago/Index.cshtml
@@ -6,8 +6,12 @@
     <div class="container ">
         <div class="text-center my-4">
             <h1 class="fw-bolder">@ViewData["Title"]</h1>
-        </div> 
+        </div>
+        <div class="col-sm-10 my-4">
+            @Html.ActionLink("Buscar Prestamos", "Index", "Prestamo", null, new { @class = "btn btn-primary" })
+        </div>
     </div>
+
 
 </header>
  
